example/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: couchbase-operator
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: couchbase-operator
    spec:
      containers:
      - name: couchbase-operator
        image: couchbase/couchbase-operator:v1
        command:
        - couchbase-operator
        # Remove the arguments section if you are installing the CRD manually
        args:
        - -create-crd
        - -enable-upgrades=false
        ports:
          - name: readiness-port
            containerPort: 8080
        readinessProbe:
          httpGet:
            path: /readyz
            port: readiness-port
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 19
