example/admission.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchbase-operator-admission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchbase-operator-admission
  template:
    metadata:
      labels:
        app: couchbase-operator-admission
    spec:
      containers:
      - name: couchbase-operator-admission
        image: couchbase/couchbase-operator-admission:v1
        command:
        - couchbase-operator-admission
        args:
          - "--logtostderr"
          - "--stderrthreshold"
          - "0"
          - "--tls-cert-file"
          - "/var/run/secrets/couchbase.com/couchbase-operator-admission/tls-cert-file"
          - "--tls-private-key-file"
          - "/var/run/secrets/couchbase.com/couchbase-operator-admission/tls-private-key-file"
        ports:
        - name: https
          containerPort: 443
        volumeMounts:
        - name: couchbase-operator-admission
          mountPath: "/var/run/secrets/couchbase.com/couchbase-operator-admission"
          readOnly: true
      volumes:
      - name: couchbase-operator-admission
        secret:
          secretName: couchbase-operator-admission
      serviceAccountName: couchbase-operator-admission
---
apiVersion: v1
kind: Service
metadata:
  name: couchbase-operator-admission
spec:
  selector:
    app: couchbase-operator-admission
  ports:
  - protocol: TCP
    port: 443
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: couchbase-operator-admission
webhooks:
- name: couchbase-operator-admission.default.svc
  rules:
  - apiGroups:
    - couchbase.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - couchbaseclusters
  clientConfig:
    service:
      namespace: default
      name: couchbase-operator-admission
      path: "/couchbaseclusters/validate"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURjVENDQWxtZ0F3SUJBZ0lKQUlwTm1XMFZOZmllTUEwR0NTcUdTSWIzRFFFQkN3VUFNQ294S0RBbUJnTlYKQkFNTUgwTnZkV05vWW1GelpTQlBjR1Z5WVhSdmNpQkJaRzFwYzNOcGIyNGdRMEV3SGhjTk1UZ3dOekkyTVRBdwpOVFF4V2hjTk1qZ3dOekl6TVRBd05UUXhXakFxTVNnd0pnWURWUVFEREI5RGIzVmphR0poYzJVZ1QzQmxjbUYwCmIzSWdRV1J0YVhOemFXOXVJRU5CTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEKeHNZMXNoTmM4WWloTUtLcUpkZG5McjVVcGlJZ0J6aG4vNDZ4LzlWT2psK3ljUlBEelRGNkh5dDJpdkZNbFc5Qgp2anlHUVlKMXcyeT [...]
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: couchbase-operator-admission
webhooks:
- name: couchbase-operator-admission.default.svc
  rules:
  - apiGroups:
    - couchbase.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - couchbaseclusters
  clientConfig:
    service:
      namespace: default
      name: couchbase-operator-admission
      path: "/couchbaseclusters/mutate"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURjVENDQWxtZ0F3SUJBZ0lKQUlwTm1XMFZOZmllTUEwR0NTcUdTSWIzRFFFQkN3VUFNQ294S0RBbUJnTlYKQkFNTUgwTnZkV05vWW1GelpTQlBjR1Z5WVhSdmNpQkJaRzFwYzNOcGIyNGdRMEV3SGhjTk1UZ3dOekkyTVRBdwpOVFF4V2hjTk1qZ3dOekl6TVRBd05UUXhXakFxTVNnd0pnWURWUVFEREI5RGIzVmphR0poYzJVZ1QzQmxjbUYwCmIzSWdRV1J0YVhOemFXOXVJRU5CTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEKeHNZMXNoTmM4WWloTUtLcUpkZG5McjVVcGlJZ0J6aG4vNDZ4LzlWT2psK3ljUlBEelRGNkh5dDJpdkZNbFc5Qgp2anlHUVlKMXcyeT [...]
